--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: pdf-backend
     env: python
     buildCommand: ""
-    startCommand: uvicorn main:app --reload
+    startCommand: uvicorn main:app --host 0.0.0.0 --port ${PORT}
     plan: free
